# mcp-chart-ui

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/chart_mcp/: __init__.py  assets.py  chart_options.py  chart_selector.py  data_reduce.py  data_utils.py  downloads.py  server.py  template.py  ui_builder.py
tests/: test_assets.py  test_chart_options.py  test_chart_selector.py  test_data_reduce.py  test_data_utils.py  test_downloads.py  test_server.py  test_ui_builder.py
