[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-mcp"
version = "0.2.0"
description = "MCP server that renders tabular data as interactive, auto-typed charts via the mcp-ui standard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "mcp-ui-server>=0.1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "starlette>=0.37",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
chart-mcp = "chart_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chart_mcp = ["vendor/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
